Release notes for OpenLava versions

4.0beta2
============

-- In bqueues -l output change the keyword RAN to STARTED to reflect
   the number of started jobs and not only ran.
-- lsid prints the 4.0beta2 identification for the current branch.
-- Implement the decay slot factor for HIST_MINUTES.

4.0beta1
========
-- Fix mbatchd core dump that happens if jobs are submitted with -t option
   of bsub and the job is terminated while pending.
-- Added bjobs -o to support custom output fields
-- Added bjobs -cwd to specify the job current working directory
-- Implement MBD_DEDICATED_RESOURCES in lsf.conf. These are host based boolean
   resources that must be defined in lsf.cluster file. A job must explicitly
   specify a dedicated resource to get allocated the host with that resource.
-- Fix a typo in lsb.queues.in, preemption was spelled with double t.
-- Fix compatibility probelms when replaying older lsb.events.
-- Fix the XDR error in the badmin qclose command.
-- Add man page for $LSF_ENVDIR/openlava
-- Add a template file $LSF_ENVDIR/limits.sh
-- Fixed sbatchd compile error on RHEL 5 because glibc lacks CPU_COUNT.
-- Fix a fairshare bug in which jobs were not running under the correct
   user group if bsub -G was specified.
-- Deleted warning message if mbatchd cannot find lsb.resources file.
   lsb.resources is optional.
-- Updated lsb.resources man page for supported use case.
-- Fixed binding incorrect cpus to a queue when HOSTS_SHARES is configured
   in lsb.queues.
-- Enlarge the -J option for the job name to be at least 4096 characters.
-- Added support for binding multiple slots to a core by introducing HOSTS_SHARES
   parameter in lsb.queues for specifying the number of shares the queue is
   allocated for particular host/hostgroup. The share represents the proportion of
   the total number of cores on a host that will be allocated to the queue.
-- Updated non-numa cpu binding feature to support binding multiple
   cores to a job.