@@ -3,6 +3,7 @@ Release notes for OpenLava versions
 4.0beta2
 ============
 
+-- badmin ckconfig checks the ownership and permission of work/logdir.
 -- In bqueues -l output change the keyword RAN to STARTED to reflect
    the number of started jobs and not only ran.
 -- lsid prints the 4.0beta2 identification for the current branch.
